# news-feed-engine

./: .pre-commit-config.yaml  CODEOWNERS  CODE_REVIEW_AND_REDEPLOYMENT_PLAN.md  EPIC_COMPLETION_SUMMARY.md  GO_LIVE_FINAL_CHECKLIST.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS_PHASE_AB.md  IMPLEMENTATION_STATUS_PHASE_C.md  LICENSE  MILESTONE_88_COMPLETION_ROADMAP.md  MILESTONE_88_STATUS.md  MILESTONE_89_ROADMAP.md  MILESTONE_90_ROADMAP.md  MILESTONE_91_ROADMAP.md  PLANNING_COMPLETE.md  PORTAL_OPERATIONAL_STATUS.md  PORTAL_SETUP_GUIDE.md  PROJECT_STATUS.md  README.md  START_HERE.md  TODO.md  WEBSITE_BLUEPRINT.md  WEBSITE_BUILDING_ROADMAP.md  docker-compose.open-webui.yml  package-lock.json
services/processor/: Dockerfile  ELITE_AI_TEST_VALIDATION_COMPLETE.md  REMEDIATION_SESSION_SUMMARY.md  TEST_COVERAGE_46_PERCENT.md  TEST_COVERAGE_STATUS.md  __init__.py  mlflow.db  pyproject.toml  pyrightconfig.json  requirements.txt  train_local_models.py  train_output.txt
services/processor/docs/: API_REFERENCE.md  viral_network.md
services/processor/models/: ugc_moderation.py
services/processor/processor/: __init__.py  ai_agents.py  analytics_pipeline.py  analyzer.py  config.py  database.py  embeddings.py  main.py  media_manager.py  oauth_manager.py  platform_publishers.py  predictive_engine.py  publishing_orchestrator.py  trend_sources.py  video_factory.py
services/processor/processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/processor/scripts/: micro_influencer.py
(+312 files in other folders)
